<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".event.AddEventFragment">


        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/image_back_state"
                android:rotation="@dimen/arrow_rotate_180"
                android:layout_marginTop="20dp"
                android:layout_marginStart="25dp"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@android:drawable/ic_media_play"
                app:layout_constraintTop_toTopOf="parent"/>

        <TextView
                android:id="@+id/text__budget_edit"
                android:text="@string/date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="20sp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="40dp"
                app:layout_constraintStart_toEndOf="@+id/image_back_state"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/image_back_state"
                app:layout_constraintBottom_toBottomOf="@+id/image_back_state"/>

        <TextView
                android:id="@+id/text_expend_title"
                android:text="@string/expand_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="58dp"
                android:layout_marginTop="22dp"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text__budget_edit"/>

        <EditText
                android:id="@+id/edit_expand"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:inputType="textPersonName"
                android:ems="10"
                android:paddingStart="16sp"
                android:layout_marginTop="9dp"
                android:layout_marginStart="55dp"
                android:layout_marginEnd="55dp"
                android:background="@drawable/radius_border"
                app:layout_constraintTop_toBottomOf="@+id/text_expend_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="21dp"
                app:layout_constraintTop_toBottomOf="@+id/edit_expand"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

            <ImageView
                    android:id="@+id/tag_breakfast"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="63dp"
                    app:srcCompat="@drawable/tag_breakfast"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                    android:id="@+id/tag_lunch"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="20dp"
                    app:srcCompat="@drawable/tag_lunch"
                    app:layout_constraintStart_toEndOf="@+id/tag_breakfast"
                    app:layout_constraintTop_toTopOf="@+id/tag_breakfast"
                    app:layout_constraintBottom_toBottomOf="@+id/tag_breakfast"
                    app:layout_constraintVertical_bias="1.0"/>

            <ImageView
                    android:id="@+id/tag_dinner"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="20dp"
                    app:srcCompat="@drawable/tag_dinner"
                    app:layout_constraintTop_toTopOf="@+id/tag_lunch"
                    app:layout_constraintBottom_toBottomOf="@+id/tag_lunch"
                    app:layout_constraintVertical_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/tag_lunch"/>

            <ImageView
                    android:id="@+id/tag_dessert"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="20dp"
                    app:srcCompat="@drawable/tag_dessert"
                    app:layout_constraintTop_toTopOf="@+id/tag_dinner"
                    app:layout_constraintBottom_toBottomOf="@+id/tag_dinner"
                    app:layout_constraintStart_toEndOf="@+id/tag_dinner"
                    app:layout_constraintVertical_bias="1.0"/>

            <ImageView
                    android:id="@+id/tag_payment"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="63dp"
                    app:srcCompat="@drawable/tag_payment"
                    app:layout_constraintTop_toTopOf="@+id/tag_dessert"
                    app:layout_constraintBottom_toBottomOf="@+id/tag_dessert"
                    app:layout_constraintStart_toEndOf="@+id/tag_dessert"
                    app:layout_constraintVertical_bias="1.0"
                    app:layout_constraintEnd_toEndOf="parent"/>

            <ImageView
                    android:id="@+id/tag_cloth"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="9dp"
                    app:srcCompat="@drawable/tag_cloth"
                    app:layout_constraintStart_toStartOf="@+id/tag_breakfast"
                    app:layout_constraintEnd_toEndOf="@+id/tag_breakfast"
                    app:layout_constraintTop_toBottomOf="@+id/text_breakfast"/>

            <ImageView
                    android:id="@+id/tag_live"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="20dp"
                    app:srcCompat="@drawable/tag_live"
                    app:layout_constraintTop_toTopOf="@+id/tag_cloth"
                    app:layout_constraintBottom_toBottomOf="@+id/tag_cloth"
                    app:layout_constraintStart_toEndOf="@+id/tag_cloth"/>

            <ImageView
                    android:id="@+id/tag_traffic"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="20dp"
                    app:srcCompat="@drawable/tag_traffic"
                    app:layout_constraintTop_toTopOf="@+id/tag_live"
                    app:layout_constraintBottom_toBottomOf="@+id/tag_live"
                    app:layout_constraintStart_toEndOf="@+id/tag_live"/>

            <ImageView
                    android:id="@+id/tag_fun"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="20dp"
                    app:srcCompat="@drawable/tag_fun"
                    app:layout_constraintTop_toTopOf="@+id/tag_traffic"
                    app:layout_constraintBottom_toBottomOf="@+id/tag_traffic"
                    app:layout_constraintStart_toEndOf="@+id/tag_traffic"/>

            <ImageView
                    android:id="@+id/tag_lottery"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="20dp"
                    app:srcCompat="@drawable/tag_lottery"
                    app:layout_constraintTop_toTopOf="@+id/tag_fun"
                    app:layout_constraintStart_toEndOf="@+id/tag_fun"
                    app:layout_constraintBottom_toBottomOf="@+id/tag_fun"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="63dp"/>

            <TextView
                    android:id="@+id/text_breakfast"
                    android:text="@string/tag_breakfast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="@+id/tag_breakfast"
                    app:layout_constraintEnd_toEndOf="@+id/tag_breakfast"
                    app:layout_constraintTop_toBottomOf="@+id/tag_breakfast"/>

            <TextView
                    android:id="@+id/text_lunch"
                    android:text="@string/tag_lunch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="@+id/tag_live"
                    app:layout_constraintStart_toStartOf="@+id/tag_live"
                    app:layout_constraintTop_toBottomOf="@+id/tag_lunch"/>

            <TextView
                    android:id="@+id/text_dinner"
                    android:text="@string/tag_dinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="@+id/tag_dinner"
                    app:layout_constraintEnd_toEndOf="@+id/tag_dinner"
                    app:layout_constraintTop_toBottomOf="@+id/tag_dinner"/>

            <TextView
                    android:id="@+id/text_dessert"
                    android:text="@string/tag_dessert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="@+id/tag_dessert"
                    app:layout_constraintEnd_toEndOf="@+id/tag_dessert"
                    app:layout_constraintTop_toBottomOf="@+id/tag_dessert"/>

            <TextView
                    android:id="@+id/text_payment"
                    android:text="@string/tag_payment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="@+id/tag_payment"
                    app:layout_constraintEnd_toEndOf="@+id/tag_payment"
                    app:layout_constraintTop_toBottomOf="@+id/tag_payment"/>

            <TextView
                    android:id="@+id/text_cloth"
                    android:text="@string/tag_cloth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="@+id/tag_cloth"
                    app:layout_constraintEnd_toEndOf="@+id/tag_cloth"
                    app:layout_constraintTop_toBottomOf="@+id/tag_cloth"/>

            <TextView
                    android:id="@+id/text_live"
                    android:text="@string/tag_live"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="@+id/tag_live"
                    app:layout_constraintStart_toStartOf="@+id/tag_live"
                    app:layout_constraintTop_toBottomOf="@+id/tag_live"/>

            <TextView
                    android:id="@+id/text_traffic"
                    android:text="@string/tag_traffic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="@+id/tag_traffic"
                    app:layout_constraintEnd_toEndOf="@+id/tag_traffic"
                    app:layout_constraintTop_toBottomOf="@+id/tag_traffic"/>

            <TextView
                    android:id="@+id/text_fun"
                    android:text="@string/tag_fun"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="@+id/tag_fun"
                    app:layout_constraintEnd_toEndOf="@+id/tag_fun"
                    app:layout_constraintTop_toBottomOf="@+id/tag_fun"/>

            <TextView
                    android:id="@+id/text_lottery"
                    android:text="@string/tag_lottery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="@+id/tag_lottery"
                    app:layout_constraintEnd_toEndOf="@+id/tag_lottery"
                    app:layout_constraintTop_toBottomOf="@+id/tag_lottery"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
                android:id="@+id/edit_description"
                android:layout_width="0dp"
                android:layout_height="280dp"
                android:inputType="textPersonName"
                android:background="@drawable/description_border"
                android:ems="10"
                android:textSize="15sp"
                android:hint="@string/hint_description"
                android:layout_marginTop="21dp"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:gravity="top"
                app:layout_constraintStart_toStartOf="@+id/edit_expand"
                app:layout_constraintEnd_toEndOf="@+id/edit_expand"
                app:layout_constraintTop_toBottomOf="@+id/tag"/>

        <ImageView
                android:id="@+id/image_save"
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:srcCompat="@drawable/save"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/edit_description"
                app:layout_constraintEnd_toEndOf="@+id/edit_description"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>